1.app.js:appExtend.updateActiveWindow(): focusing moved from here to desktopwindow.focus() 2.action/Grid.js  - rowset.viewConfig.listeners.itemkeydown: refactored to use keyPagingNav()  - storeLoadCallbackDefault(): wrapper.focus() call is used instead of view.focus()  - gridKeyMap(): excel-export shortcut kept only for keydown, others moved to action/Rowset.js 3.action/Row.js: added south.tabBar.layout.overflowHandler: 'menu' 4.action/Rowset.js  - added rowsetKeyMap(): mostly moved here from action/Grid.js  - added keyPagingNav(which) 5.view/action/Panel.js  - added focus()  - fitWindow(): added respect for window.keepMaximized 6.all.scss: added style for .x-tab-bar-more-icon, .x-toolbar-more-icon 7.app.css: added padding fix for cell overflow 8.desktop/Window.js  - added config.keepMaximized  - added focus(),  - overridded toggleMaximize() to call focus() 9.view/action/south/South.js  - onTabBarClick(): overflow menu button skipped 10.overrides/button/Button.js  - press(): changed me.handler() to me.click(..) due to problems with pagingtoolbar buttons 12.overrides/grid/Panel.js  - getCellPlainText(): added some workaround to mind uppercase chars are wider than others 13.overrides/grid/plugin/Editing.js  - onCellSecondClick(..., e): e.position() is cloned so that clone is passed to setActionableMode() call    to solve problem of celleditor opened in not the cell where second click happened but cell where mouse    was accidently moved away from initial cell

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1670,6 +1670,9 @@ font[color][title] {
 .x-grid-cell.i-overflow:hover .x-grid-cell-inner {
     white-space: pre;
 }
+.x-grid-cell.i-overflow:hover .x-grid-cell-inner {
+    display: inline-block;
+}
 .i-window-header.x-toolbar-default .x-tool-img {
     background-image: url(../images/tools/tool-sprites.png);
 }
